--- a/src/styles/layout/_team.sass
+++ b/src/styles/layout/_team.sass
@@ -42,7 +42,6 @@
             margin-bottom: 24px
 
         &__wrapper
-            width: 100%
             grid-template-columns: 1fr
             row-gap: 0
             margin-left: 20px
